@@ -1,5 +1,7 @@
 201404??		3.4
 	- Fix to ensure SCSI phase bits are set atomically.
+	- Always return the requested number of bytes for a REQUEST SENSE command
+		This is required to support the Ensoniq ASR-10.
 	- Decreased (unused) heap and stack sizes to prepare for a memory
 	write cache
 
